# ChangeLog for dev-python/python-xlib
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-xlib/ChangeLog,v 1.16 2007/04/21 17:32:13 pythonhead Exp $

  21 Apr 2007; Rob Cakebread <pythonhead@gentoo.org>
  python-xlib-0.12-r3.ebuild:
  Added src_test

*python-xlib-0.13 (21 Apr 2007)

  21 Apr 2007; Rob Cakebread <pythonhead@gentoo.org>
  +python-xlib-0.13.ebuild:
  Version bump. Added src_test. Removed doc patches. bug# 169915

  12 Jan 2007; Lukasz Strzygowski <lucass@gentoo.org>
  files/python-xlib-0.12-coding.patch:
  Modified coding patch to omit line with Id: tag.

*python-xlib-0.12-r3 (12 Jan 2007)

  12 Jan 2007; Lukasz Strzygowski <lucass@gentoo.org>
  +files/python-xlib-0.12-coding.patch, +python-xlib-0.12-r3.ebuild:
  Patch to fix encoding issue (bug #149223), minor cleanup.

*python-xlib-0.12-r2 (08 Feb 2006)

  08 Feb 2006; Lukasz Strzygowski <lucass@gentoo.org>
  +files/python-xlib-0.12-buflen.patch, +python-xlib-0.12-r2.ebuild:
  Patch to enlarge buffer (bug #96093).

  24 Apr 2005; Simon Stelling <blubb@gentoo.org> python-xlib-0.12-r1.ebuild:
  stable on amd64

  31 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  17 Dec 2004; Tom Martin <slarti@gentoo.org> python-xlib-0.12-r1.ebuild:
  Marked ~amd64.

  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> python-xlib-0.12.ebuild:
  Remove default S.

  03 Apr 2004; Lars Weiler <pylon@gentoo.org> python-xlib-0.12-r1.ebuild:
  stable on ppc

*python-xlib-0.12-r1 (02 Mar 2004)

  02 Mar 2004; <kloeri@gentoo.org> python-xlib-0.12-r1.ebuild,
  files/python-xlib-0.12-info.patch:
  Fix missing info dir entries, closing bug #43424.

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> python-xlib-0.12.ebuild:
  stable on alpha and ia64

*python-xlib-0.12 (17 Dec 2002)

  04 Apr 2003; Alastair Tse <liquidx@gentoo.org> python-xlib-0.12.ebuild:
  stable bump
