@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/python-xlib
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-xlib/ChangeLog,v 1.16 2007/04/21 17:32:13 pythonhead Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-xlib/ChangeLog,v 1.17 2007/04/21 20:12:02 pythonhead Exp $
+
+  21 Apr 2007; Rob Cakebread <pythonhead@gentoo.org>
+  python-xlib-0.13.ebuild:
+  Fixed docs add doc USE. bug #175475
 
   21 Apr 2007; Rob Cakebread <pythonhead@gentoo.org>
   python-xlib-0.12-r3.ebuild:
